PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.python-syntax-error-unexpected-character-line-cotinuation-character.txt
<div class="post-text" itemprop="text">
<p>I am a beginner to python and am at the moment having trouble using the command line. I have a script test.py (which only contains <code>print("Hello.")</code>), and it is located in the map C:\Python27. In my system variables, I have specified python to be C:\Python27 (I have other versions of Python installed on my computer as well).</p>
<p>I thought this should be enough to run <code>python test.py</code> in the command line, but when I do so I get this:</p>
<pre><code>File "&lt;stdin&gt;", line 1
python test.py
       ^
SyntaxError: invalid syntax
</code></pre>
<p>What is wrong? Thanks in advance!</p>
</div>
<div class="post-text" itemprop="text">
<p>Looks like your problem is that you are trying to run <code>python test.py</code> <em>from within the Python interpreter</em>, which is why you're seeing that traceback.</p>
<p>Make sure you're out of the interpreter, then run the <code>python test.py</code> command from bash or command prompt or whatever.</p>
</div>
<div class="post-text" itemprop="text">
<p>Don't type <code>python test.py</code> from inside the Python interpreter. Type it at the command prompt, like so:</p>
<p><img alt="cmd.exe" src="https://i.stack.imgur.com/gc2Q1.png"/></p>
<p><img alt="python test.py" src="https://i.imgur.com/TFUBm.png"/></p>
</div>
<div class="post-text" itemprop="text">
<p>I faced a similar problem, on my Windows computer, please do check that you have set the Environment Variables correctly.</p>
<p>To check that Environment variable is set correctly:</p>
<ol>
<li>Open cmd.exe</li>
<li>Type Python and press return</li>
<li><p>(a) If it outputs the version of python then the environment variables are set correctly.</p>
<p>(b) If it outputs "no such program or file name" then your
environment variable are not set correctly.</p></li>
</ol>
<p>To set environment variable: </p>
<ol>
<li>goto Computer-&gt; System Properties-&gt; Advanced System Settings -&gt; Set Environment Variables</li>
<li>Goto path in the system variables; append ;C:\Python27 in the end.</li>
</ol>
<p>If you have correct variables already set; then you are calling the file inside the python interpreter. </p>
</div>
<div class="post-text" itemprop="text">
<p>Running from the command line means running from the terminal or DOS shell.  You are running it from Python itself.  </p>
</div>
<div class="post-text" itemprop="text">
<p>In order to run scripts, you should write the "python test.py" command in the command prompt, and not within the python shell. also, the test.py file should be at the path you run from in the cli.</p>
</div>
<div class="post-text" itemprop="text">
<p>Come out of the "python interpreter." </p>
<ol>
<li>Check out your PATH variable c:\python27</li>
<li>cd and your file location.
3.Now type Python yourfilename.py.</li>
</ol>
<p>I hope this should work</p>
</div>
<span class="comment-copy">@Johanna It's not the script, it's how you're running it. You're typing <code>python test.py</code> at the wrong place.</span>
<span class="comment-copy">@Johanna What do you mean, "corrected the script"? There was nothing wrong with the script.</span>
<span class="comment-copy">If you are using Windows, press Win+R and type <code>cmd</code> there. Then navigate to the script containing directory and type <code>python test.py</code>.  If you're on mac or linux, then open terminal, navigate to the script containing directory and type in <code>python test.py</code>.</span>
<span class="comment-copy">@Johanna <code>print("foo")</code> is valid in Python 2.x. What exactly do you mean by "the command line"?</span>
<span class="comment-copy">@Johanna "Python (command line)" executes <code>python</code>. Thus you were trying to execute <code>python test.py</code> from within a running <code>python</code>. (That's the error.) If you don't have a <a href="http://www.simplehelp.net/images/winkey/windowskey00.jpg" rel="nofollow noreferrer">win key</a>, you need to find some other way to execute <code>cmd</code> (e.g. on my Windows XP I have "Run..." in my Start menu).</span>
